[package]
name = "Buffallo"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"


[dependencies]
embedded-graphics = "0.8.1"
ovmf-prebuilt = "0.2.3"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
